--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@boilerplate/backend",
+  "name": "@fastquizparty/backend",
   "version": "1.0.0",
-  "description": "Backend API with Fastify and Prisma",
+  "description": "FastQuizParty Backend API with Fastify and Prisma",
   "main": "dist/server.js",
   "private": true,
   "scripts": {
